welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but 'else' found.
  else if(negative == true  && a<0 && b<0){return true}
  ^